--- a/styles/module.css
+++ b/styles/module.css
@@ -1,3 +1,7 @@
+#foundryvtt-miro-connector {
+  background-color: #f2f2f2;
+}
+
 #foundryvtt-miro-connector-dialog .window-content .dialog-buttons button {
   -webkit-box-flex: 1;
   -ms-flex: auto;
