--- a/styles/module.scss
+++ b/styles/module.scss
@@ -1,3 +1,11 @@
+$miro-background-color: #f2f2f2;
+
+// Miro layer
+#foundryvtt-miro-connector {
+  background-color: $miro-background-color;
+}
+
+// Dialog
 #foundryvtt-miro-connector-dialog .window-content .dialog-buttons button {
   flex: auto;
 
